--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,8 @@ dependencies {
     implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0"
     implementation "com.jakewharton.rxbinding2:rxbinding-design:2.0.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
-
+//lottie animation
+    implementation 'com.airbnb.android:lottie:3.0.7'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
