--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,9 +59,8 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
 
-    // Kodein
-    implementation "org.kodein.di:kodein-di-generic-jvm:$kodein_version"
-    implementation "org.kodein.di:kodein-di-framework-android-x:$kodein_version"
+    // Koin for Android
+    implementation "org.koin:koin-android:$koin_version"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
