--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.31'
     ext.room_version = '2.2.0-alpha02'
     ext.navigation_version = '1.0.0'
-    ext.kodein_version = '5.2.0'
+    ext.koin_version = '1.0.2'
     ext.lifecycle_version = '2.0.0'
     ext.retrofit_version = '2.4.0'
     repositories {
