--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+API_KEY="ad814c6f41ce4d5918d02d96d0ab9c01"
+HASH="763f2846bb355790ecdbe96178a5551b"
