--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     kapt "androidx.room:room-compiler:$room_version"
 
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta04'
+
     // Gson
     implementation "com.google.code.gson:gson:2.8.5"
 
